--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires-python = ">=3.12"
 version = "0.1.0"
 description = "A programming project analyzing EEG data for psychiatric disorder classification."
 authors = ["Ohad Gonen, Ora Friedman <ohadgonen0@gmail.com> <oranechama@gmail.com>"]
-license = "MIT"
+
 dependencies = [
     "numpy==2.1.3",
     "pandas==2.2.3",
@@ -19,8 +19,7 @@ dependencies = [
     "seaborn==0.12.2",
     "mne==1.2.2",
     "networkx==3.0",
-    "imbalanced-learn==0.10.1",
-    "unittest"
+    "imbalanced-learn==0.10.1"
 ]
 
 [project.optional-dependencies]
